[metadata]
name = pinax-images
version = 5.0.0
author = Pinax Team
author_email = team@pinaxproject.com
description = an app for managing collections of images associated with a content object
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pinax/pinax-images/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = pinax
packages = find:
install_requires =
    django>=2.2
    django-imagekit>=4.0.2
    pilkit>=2.0.0
    pillow>=7.1.2
    pytz>=2020.1
zip_safe = False

[options.packages.find]
where = pinax
